objects/ssot__BenefitSession__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitScheduleId__c</fullName>
        <label>Benefit Schedule</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitSessionStatus__c</fullName>
        <label>Benefit Session Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Benefit Session Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726630109_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BenefitSession_BenefitScheduleId_map_rel</label>
        <referenceTo>ssot__BenefitSchedule__dlm</referenceTo>
        <relationshipLabel>BenefitSession_BenefitScheduleId_map_rel</relationshipLabel>
        <relationshipName>rel_1716726630109_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>